fix: changed background-attachment from fixed to scroll, to fix image display issue when viewing index.html on iOS devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ body::-webkit-scrollbar {
 .contact-image-container {
     height: 85vh;
 
-    background: url('../images/dragon-lights.jpg') no-repeat top left fixed;
+    background: url('../images/dragon-lights.jpg') no-repeat top left scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
